# RustyAi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ARCHITEKTUR_IDE_ROADMAP_B.md  BERICHT_PRÜFUNG.md  HANDBUCH.md  README.md
rusty_ai/: Cargo.toml  README.md
rusty_ai/assets/mini_local/: README.md  config.json  model.safetensors
rusty_ai/examples/: mini_local_inference.rs  train_micro_checkpoint.rs  train_mini_gpt.rs  train_mlp.rs
rusty_ai/src/: lib.rs
rusty_ai_agent/: Cargo.toml  README.md  SECURITY.md
rusty_ai_agent/examples/: agent_demo.rs  agent_retry_demo.rs  batch_report_demo.rs  cargo_test_demo.rs  dual_backend_demo.rs  openai_smoke.rs  openai_stream.rs  telemetry_demo.rs  tiny_llm_fallback_demo.rs
rusty_ai_agent/prompts/v1/: analyze.md  fix.md  manifest.json  migrate.md
rusty_ai_agent/schemas/: lsp_diagnostics_export.json  policy_catalog.example.json  tool_invocation.json
rusty_ai_agent/src/: batch_report.rs  cargo_test.rs  diagnostics.rs  diff_preview.rs  error.rs  executor.rs  fallback_backend.rs  lib.rs  llm_backend.rs  minigpt_backend.rs  openai_compat.rs  orchestrator.rs  policy.rs  policy_catalog.rs  prompts.rs  telemetry.rs  tool_parse.rs  tools.rs
rusty_ai_agent/src/batch/: batch_report.rs  budget.rs  mod.rs
rusty_ai_agent/src/core/: error.rs  llm_backend.rs  mod.rs
rusty_ai_agent/src/execution/: fallback_backend.rs  mod.rs  orchestrator.rs
rusty_ai_agent/src/feedback/: cargo_test.rs  diagnostics.rs  mod.rs  prompts.rs
rusty_ai_agent/src/http/: mod.rs  openai_compat.rs
rusty_ai_agent/src/policy/: allowlist.rs  catalog.rs  mod.rs
rusty_ai_agent/src/telemetry/: mod.rs
rusty_ai_agent/src/tools/: diff_preview.rs  invocation.rs  mod.rs  parse.rs
rusty_ai_autograd/: Cargo.toml
rusty_ai_autograd/src/: context.rs  grad_utils.rs  lib.rs  structural.rs  variable.rs
rusty_ai_backend_candle/: Cargo.toml  README.md
rusty_ai_backend_candle/src/: device.rs  distributed.rs  fp8.rs  lib.rs  matmul.rs
rusty_ai_core/: Cargo.toml
rusty_ai_core/src/: dtype.rs  error.rs  lib.rs  ops.rs  shape.rs  tensor.rs
rusty_ai_llm/: Cargo.toml  README.md
rusty_ai_llm/src/: attention.rs  attention_var.rs  checkpoint.rs  fim.rs  generate.rs  gpt2_hf.rs  gpt2_tokenizer.rs  heads.rs  kv_cache.rs  lib.rs  linear_tensor.rs  model.rs  tokenizer.rs  trainable.rs
rusty_ai_llm/src/attention/: causal.rs  mod.rs  variable.rs
rusty_ai_llm/src/cache/: mod.rs
rusty_ai_llm/src/checkpoint/: mod.rs
rusty_ai_llm/src/hf/: gpt2.rs  mod.rs
rusty_ai_llm/src/inference/: fim.rs  generate.rs  mod.rs
rusty_ai_llm/src/model/: heads.rs  linear.rs  minigpt.rs  mod.rs  trainable.rs
rusty_ai_llm/src/tokenizer/: byte.rs  gpt2_bpe.rs  mod.rs
rusty_ai_ml/: Cargo.toml
rusty_ai_ml/src/: dataset.rs  lib.rs  optimizer.rs
rusty_ai_nn/: Cargo.toml
rusty_ai_nn/src/: activation.rs  init.rs  lib.rs  linear.rs
rusty_ai_workspace/: Cargo.toml  README.md
rusty_ai_workspace/examples/: workspace_index_demo.rs
rusty_ai_workspace/src/: lib.rs
