[package]
name = "rusty_ai"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
rusty_ai_core = { path = "../rusty_ai_core" }
rusty_ai_autograd = { path = "../rusty_ai_autograd" }
rusty_ai_nn = { path = "../rusty_ai_nn" }
rusty_ai_ml = { path = "../rusty_ai_ml" }
rusty_ai_llm = { path = "../rusty_ai_llm" }

[[example]]
name = "train_mlp"
path = "examples/train_mlp.rs"

[[example]]
name = "train_mini_gpt"
path = "examples/train_mini_gpt.rs"
