[package]
name = "rusty_ai_agent"
version = "1.4.0"
edition.workspace = true
license.workspace = true
description = "Phase-0 agent protocol: LlmBackend trait, chat/tool JSON types, JSON Schema for tools."
readme = "README.md"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
