[package]
name = "rusty_ai_backend_candle"
version = "2.0.0"
edition.workspace = true
license.workspace = true
description = "Optional Candle (CPU/CUDA) backend for RustyAi: matmul, FP8 helpers, distributed primitives."

[features]
default = []
# NVIDIA CUDA kernels (requires CUDA toolkit at build time when enabled).
cuda = ["candle-core/cuda"]
# NCCL multi-GPU collectives (implies `cuda`).
nccl = ["candle-core/nccl", "cuda"]

[dependencies]
candle-core = { version = "0.9.2", default-features = false }

[dev-dependencies]
rusty_ai_core = { path = "../rusty_ai_core" }
rusty_ai_llm = { path = "../rusty_ai_llm" }
