[package]
name = "rusty_ai_llm"
version = "1.4.0"
edition.workspace = true
license.workspace = true

[features]
default = []
# Optional: download checkpoints from the Hugging Face Hub.
hf-hub = ["dep:hf-hub"]

[dependencies]
rusty_ai_core = { path = "../rusty_ai_core" }
rusty_ai_autograd = { path = "../rusty_ai_autograd" }
rusty_ai_nn = { path = "../rusty_ai_nn" }
safetensors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hf-hub = { version = "0.3", optional = true }
