[package]
name = "rusty_ai_llm"
version = "2.0.0"
edition.workspace = true
license.workspace = true

[features]
default = []
# Optional: download checkpoints from the Hugging Face Hub.
hf-hub = ["dep:hf-hub"]
# GPT-2–compatible BPE via Hugging Face `tokenizers` (Rust); load `tokenizer.json` from HF checkpoints.
gpt2-bpe = ["dep:tokenizers"]

[dependencies]
rusty_ai_core = { path = "../rusty_ai_core" }
rusty_ai_autograd = { path = "../rusty_ai_autograd" }
rusty_ai_nn = { path = "../rusty_ai_nn" }
safetensors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hf-hub = { version = "0.3", optional = true }
tokenizers = { version = "0.22.2", optional = true }
