[package]
name = "rusty_ai_workspace"
version = "2.0.0"
edition.workspace = true
license.workspace = true
description = "Workspace file index: line-based chunks, substring search, optional HTTP embeddings."

[features]
default = []
embeddings = ["dep:reqwest"]

[dependencies]
reqwest = { version = "0.12", optional = true, default-features = true, features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2"

[[example]]
name = "workspace_index_demo"
